# yew-template

./: Cargo.toml  Trunk.toml  index.html  package-lock.json  package.json  tailwind.config.js
src/: app.rs  lib.rs
