[package]
edition = "2021"
name = "yew-template"
version = "0.1.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
im-rc = {version = "15.1.0", features = ["serde"]}
js-sys = "0.3.59"
serde = {version = "1.0.144", features = ["derive"]}
serde_json = "1.0.85"
uuid = {version = "1.1.2", features = ["v4", "fast-rng", "js", "serde"]}
wasm-bindgen = "0.2.82"
web-sys = {version = "0.3.59", features = ["Window", "HtmlElement", "console", "Document", "CssStyleDeclaration"]}
yew = "0.19.3"

[profile.release]
lto = true
opt-level = "z"
panic = "abort"
strip = true

[profile.dev]
incremental = true
